exports[`addItem should have a type of "ADD_ITEM" 1`] = `
Object {
  "type": "ADD_ITEM",
}
`;

exports[`checkItem should have a type of "CHECK_ITEM" 1`] = `
Object {
  "text": undefined,
  "type": "CHECK_ITEM",
}
`;

exports[`checkItem should pass on the text passed to it as the first argument 1`] = `
Object {
  "text": "Some text",
  "type": "CHECK_ITEM",
}
`;

exports[`editInput should have a type of "EDIT_INPUT" 1`] = `
Object {
  "text": undefined,
  "type": "EDIT_INPUT",
}
`;

exports[`editInput should pass on the text passed to it as the first argument 1`] = `
Object {
  "text": "Some text",
  "type": "EDIT_INPUT",
}
`;
